fix: make percentages non-decimal and make labels not cut off

--- a/src/main/resources/css/styles.css
+++ b/src/main/resources/css/styles.css
@@ -65,5 +65,5 @@
 }
 
 #predictionsContainer * {
-    -fx-font-size: 18px;
+    -fx-font-size: 16px;
 }
